--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World
+<html>
+  <head>
+  <title>Tarra Recipe</title>
+  </head>
+  <body>
+    <h1>Banana Bread</h1>
+    <ul>
+      <li><a href="#description">Description</a></li>
+      <li><a href="#ingredients">Ingredients</a></li>
+      <li><a href="#directions">Directions</a></li>
+    </ul>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Banana_bread_078.jpg/800px-Banana_bread_078.jpg" />
+    <h2 id=description>Description</h2>
+    <p>
+      Are your bananas brown, spotty, past their prime, and on the verge
+      of being rotten? Time to make banana bread! This recipe does not
+      need a fancy mixer. Everything can be prepped in one bowl. A fork
+      to whisk the eggs and a spatula to mix the batter is all you need.
+      <a href="https://en.wikipedia.org/wiki/Banana_bread">Wikipage</a>
+    </p>
+    <h2 id="ingredients">Ingredients</h2>
+    <ul>
+      <li>2-3 very ripe bananas, peeled</li>
+      <li>1/3 c melted butter</li>
+      <li>1 ts baking soda</li>
+      <li>Pinch of salt</li>
+      <li>3/4 c brown sugar</li>
+      <li>1 large egg, beaten</li>
+      <li>1 ts vanilla extract</li>
+      <li>1 1/2 c all-purpose flour</li>
+    </ul>
+    <h2 id="directions">Directions</h2>
+    <ol>
+      <li>
+        Preheat the oven to 350&deg;F, and butter a 4x8-inch loaf pan.
+      </li>
+      <li>
+        In a mixing bowl, mash the ripe bananas with a fork until
+        completely smooth. Stir the melted butter into the mashed
+        bananas.
+      </li>
+      <li>
+        Mix in the baking soda and salt. Stir in the sugar, beaten
+        egg, and vanilla extract. Mix in the flour.
+      </li>
+      <li>
+        Pour the batter into yoru prepared loaf pan. Bake for 50
+        minutes to 1 hour at 350&deg;F, or until a tester inserted
+        into the center comes out clean.
+      </li>
+      <li>
+        Remove from oven and cool completely on a rack. Remove
+        the banana bread from the pan. Slice and serve.
+      </li>
+    </ol>
+    <p>
+      Credit:
+    <a href="http://www.simplyrecipes.com/recipes/banana_bread/">
+      Banana Bread by Elise Bauer
+    </a>
+    </p>
+  </body>
+</html>
