--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Tarra's Recipe</title>
     <meta name="description" content="Easy Simple Banana Bread Recipe">
     <meta charset="utf-8">
+
+    <link rel="stylesheet" href="css_custom_reset.css" type="text/css"/>
+    <link rel="stylesheet" href="css_syntax.css" type="text/css"/>
     <script type="text/javascript" src="external_javascript_example.js"/>
-    <link rel="stylesheet" href="css_reset.css" type="text/css"/>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,7 +34,7 @@
     <aside>
       <h2 id="ingredients">Ingredients</h2>
 
-      <ul>
+      <ul class="ingredients-list">
         <li>2-3 very ripe bananas, peeled</li>
         <li>1/3 c melted butter</li>
         <li>1 ts baking soda</li>
